[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atw"
version = "0.1.0"
description = "Implementatie van de Algemene termijnenwet voor het berekenen van verlengde termijnen"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "python-dateutil>=2.8.0",
]
keywords = ["termijn", "algemene termijnenwet", "atw", "feestdagen", "nederland"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Dutch",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/taxlation/atw"
Repository = "https://github.com/taxlation/atw"

[tool.setuptools.packages.find]
where = ["src"]

